--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = general_py-3ud49
 version = 0.0.1
-author = David Odhiambo
-author_email = odaudi29@gmail.com
+author = ""
+author_email = ""
 description = General python package for python programming
 long_description = file: README.md
 long_description_content_type = text/markdown
